--- a/application/views/scripts/utilisateurs/index.phtml
+++ b/application/views/scripts/utilisateurs/index.phtml
@@ -90,5 +90,12 @@ echo $this->placeholder('menu-connecte');
 	        ?>
         </div>
     </div> <!-- action_formateur -->
+    <?php 
+    	}
+	    if($this->client){ 
+	?>
+    <div id="action_client">
+
+    </div> <!-- action_client -->
     <?php }
 		 echo $this->placeholder('sidebar');?>
