--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -27,6 +27,7 @@ $user = new Zend_Session_Namespace('user');?>
 		<script src="<?php APPLICATION_PATH?>/js/cufon-replace.js" type="text/javascript"></script> 
 		<script src="<?php APPLICATION_PATH?>/js/Myriad_Pro_400.font.js" type="text/javascript"></script>
 		<script src="<?php APPLICATION_PATH?>/js/Humnst777_BT_700.font.js" type="text/javascript"></script>
+		<script src="<?php APPLICATION_PATH?>/js/function.js" type="text/javascript"></script>
 
 		<script type="text/javascript" src="http://download.skype.com/share/skypebuttons/js/skypeCheck.js"></script>
 	<!--
