--- a/application/views/scripts/inscription/index.phtml
+++ b/application/views/scripts/inscription/index.phtml
@@ -441,8 +441,7 @@ $user = new Zend_Session_Namespace('user');?>
             delay : 0
         });
         
-        // Variables pour la validation du submit, doit être à 12 pour valider le submit
-        var okForSubmit = 0;
+        // Variables pour la validation du submit
         var nom_check = false;
         var prenom_check = false;
         var adresse_check = false;
@@ -454,6 +453,7 @@ $user = new Zend_Session_Namespace('user');?>
         var password_check = false;
         var password_conf_check = false;
         var mail_check = false;
+        var departement_naissance_check = false;
         var array_check = [];
 
         // Vérification de okForSubmit et envoie du form si ok
@@ -461,19 +461,21 @@ $user = new Zend_Session_Namespace('user');?>
 
           $('#submit_inscription').focus();
 
-          if($('#paysNaissance').val() == 'France' && $('#departementNaissance').val() == ''){
-               console.log('if');
-               $('#departementNaissance-element, #departementNaissance-label').show();
-               $("#departementNaissance").focus();
-               $("#info_submit").html("Veuillez remplir votre département de naissance");
-               $("#info_submit").show();
-               setTimeout(function() {
-                  $( "#info_submit" ).fadeOut("slow");
-               }, 2000 );
-               return false;
-          }
           if(array_check.length > 0)
                array_check = [];
+
+          // On rapelle toutes les vérifications au cas ou
+          login_check = loginCheck($('#login').val());
+          telephone_check = telephoneCheck($('#telephone').val());
+          mail_check = mailCheck($('#mail').val());
+          password_check = passwordCheck($('#password').val());
+          password_conf_check = passwordconfCheck($('#password').val(), $('#password_conf').val());
+          date_naissance_check = datenaissanceCheck($('#dateNaissance').val());
+          nom_check = nomCheck($('#nom').val());
+          prenom_check = prenomCheck($('#prenom').val());
+          adresse_check = adresseCheck($('#adresse').val());
+          code_postal_check = codepostalCheck($('#codePostal').val());
+          departement_naissance_check = departementnaissanceCheck($('#departementNaissance').val());
 
           array_check.push(nom_check);
           array_check.push(prenom_check);
@@ -481,7 +483,7 @@ $user = new Zend_Session_Namespace('user');?>
           array_check.push(code_postal_check);
           array_check.push(telephone_check);
           array_check.push(date_naissance_check);
-          //array_check.push(pays_naissance_check);
+          array_check.push(departement_naissance_check);
           array_check.push(login_check);
           array_check.push(password_check);
           array_check.push(password_conf_check);
@@ -501,167 +503,49 @@ $user = new Zend_Session_Namespace('user');?>
         
         // Vérification de l'existance du login
         $("#login").blur(function(){
-            if($("#login").val().length < 3){
-                $("#info_login").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp;Veuillez remplir le nom d'utilisateur ");
-            }else{
-                $.ajax({
-                   url: "/utilisateurs/testloginexist",
-                   type: "post",
-                   data: {'login' : $('#login').val()},
-                   success: function(data){
-                       if(data == 'true'){
-                           $("#info_login").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp;Le nom d'utilisateur existe déjà !");
-                           login_check = false;
-                       }else{   
-                            $("#info_login").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />");
-                            login_check = true;
-                       }
-                   }
-                });
-            }
+            loginCheck($('#login').val());
         });
         
         // Vérification du champs téléphone
         $("#telephone").blur(function(){
-            var regExp = new RegExp(/^0[1-9][0-9]{8}$/);
-            
-            if($("#telephone").val().length === 10){
-                if(regExp.test($("#telephone").val())){
-                    $("#info_telephone").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />");
-                    telephone_check = true;
-                }else{
-                    $("#info_telephone").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp;Veuillez rentrer un numéros de téléphone correct ");
-                    telephone_check = false;
-                }
-            }else if($("#telephone").val().length < 10){
-                $("#info_telephone").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; Le numéro de téléphone est trop court");
-                telephone_check = false;
-            }else if($("#telephone").val().length > 10){
-            	$("#info_telephone").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; Le numéro de téléphone est trop long");
-               telephone_check = false;
-            }
+            telephoneCheck($('#telephone').val());
         });
         
         // Vérification de la validité et de la non-existance de l'adresse mail
         $("#mail").blur(function(){
-            mail_check = false;
-            var regExp = new RegExp(/^^[a-z0-9._-]+@[a-z0-9._-àáâãäåçèéêëìíîïðòóôõöùúûüýÿ]{2,}\.[a-z]{2,4}$/);
-            if($("#mail").val().length < 1){
-                $("#info_email").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp;Veuillez remplir l'adresse e-mail ");
-             }else if(regExp.test($("#mail").val())){
-                $.ajax({
-                   url: "/utilisateurs/testemailexist",
-                   type: "post",
-                   async : false,
-                   data: {'mail' : $("#mail").val()},
-                   success : function(data){
-                       if(data == "true"){
-                            $("#info_email").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp;L'adresse e-mail existe déjà ");
-                        }else{
-                          $("#info_email").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />");
-                            mail_check = true;
-                        }
-                   } 
-                });
-            }else
-                $("#info_email").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp;Le format de l'adresse e-mail n'est pas correct ");   
+            mailCheck($('#mail').val());
         });
 
         // Vérification de la longueur du password
         $("#password").blur(function(){
-        	var regExp = new RegExp(/(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$/);
-            if(!regExp.test($("#password").val())){
-                 $("#info_password").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' style='font-size:5px' alt='erreur' />&nbsp;8 charactères, 1 majuscule, 1 chiffre minimum");
-                 password_check = false;
-            }else{
-                $("#info_password").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />");
-                password_check = true;
-            }
+          passwordCheck($('#password').val());
         });
         
         $("#password_conf").blur(function(){
-        	if($("#password").val() == $("#password_conf").val()){
-        		$("#info_password_conf").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />");
-                password_conf_check = true;
-        	}
-			else{
-				$("#info_password_conf").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; La confirmation ne correspond pas");        		
-                    password_conf_check = false
-               }
+          passwordconfCheck($('#password').val(), $('#password_conf').val());
         });
         
         // Vérification du format de la date
         $("#dateNaissance").blur(function(){
-            if($('#dateNaissance').val().length > 0){
-                var regExp = new RegExp(/^[0-9]{2}[\/][0-9]{2}[\/][0-9]{4}$/);
-                if(regExp.test($("#dateNaissance").val())){
-                	// On regarde si la personne qui s'inscrie à au minimum 18 ans
-                	var date = new Date();
-                	var date_string = new String(date);
-                	var date_year = date_string.split(' ');
-                	date_year = date_year[3];
-					
-					var formateur_year = $("#dateNaissance").val().split('/');
-					formateur_year = formateur_year[2];
-					
-					if((date_year - formateur_year) >= 18){
-						$("#info_dateNaissance").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />");
-	                        date_naissance_check = true;
-					}else{
-						$("#info_dateNaissance").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp;Vous devez avoir au moins 18 ans pour vous inscrire ");
-                              date_naissance_check = false;
-                         }
-                }
-                else{
-                    $("#info_dateNaissance").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp;Veuillez saisir votre date de naissance ");
-                    date_naissance_check = false;
-                }
-            }
+            datenaissanceCheck($('#dateNaissance').val());
         });
         
         // Vérification du remplissage de tout les champs
         
         $("#nom").blur(function(){
-             nom_check = false;
-	        var regExp = new RegExp(/^[A-Z]*[a-z]*(-)?[a-z]*$/);
-	        if(regExp.test($("#nom").val())){
-	            if($('#nom').val().length > 0){
-	                $("#info_nom").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />");
-	                nom_check = true;
-	            }else
-	                $("#info_nom").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; Veuillez saisir votre nom ");
-
-            }else
-            	$("#info_nom").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; Veuillez saisir votre nom ");
+          nomCheck($('#nom').val());
         });
         
         $("#prenom").blur(function(){
-               prenom_check = false;
-	         var regExp = new RegExp(/^[A-Z]*[a-z]*(-)?[a-z]*$/);
-            if($('#prenom').val().length > 0 && regExp.test($("#prenom").val())){
-                $("#info_prenom").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />");
-                prenom_check = true;
-            }else
-                $("#info_prenom").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; Veuillez saisir votre prénom ");
+          prenomCheck($('#prenom').val());
         });
         
         $("#adresse").blur(function(){
-          adresse_check = false;
-            if($('#adresse').val().length > 0){
-                $("#info_adresse").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />");
-                adresse_check = true;
-            }else
-                $("#info_adresse").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; Veuillez saisir votre adresse ");
+          adresseCheck($('#adresse').val());
         });
         
         $("#codePostal").blur(function(){
-          code_postal_check = false;
-        	var regExp = new RegExp(/[0-9]{5}/);
-            if(regExp.test($("#codePostal").val()) && $("#codePostal").val().length == 5){
-                $("#info_codePostal").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />");
-                code_postal_check = true;
-            }else
-                $("#info_codePostal").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; Veuillez saisir votre code postal ");
+          codepostalCheck($('#codePostal').val());
         });
         
         // $("#ville").blur(function(){
@@ -672,35 +556,11 @@ $user = new Zend_Session_Namespace('user');?>
         // });
             
         $("#departementNaissance").blur(function(){
-            var regExp = new RegExp(/[0-9]{2}/);
-            if(!regExp.test($("#departementNaissance").val()) || $("#departementNaissance").val().length > 2){
-            	$("#info_departementNaissance").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; Votre département doit être de la forme suivante : XX ");
-            }else{
-                $("#info_departementNaissance").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />");
-            }
+            departementnaissanceCheck($('#departementNaissance').val());
         });
         
         $("#paysNaissance").change(function(){
-          pays_naissance_check = false;
-        	var regExp = new RegExp(/[a-zA-Z]/);
-        	if(regExp.test($("#paysNaissance").val())){
-	            if($('#paysNaissance').val().length > 0){
-	                $("#info_paysNaissance").html("<img src='<?php APPLICATION_PATH?>/images/icone_ok.png' height='20px' width='20px' alt='valide' />");
-                  
-                  console.log($('#paysNaissance').val());
-                  // Si le pays est la france on cache le champs département
-                  if($('#paysNaissance').val() == 'France'){
-                    $('#departementNaissance-element, #departementNaissance-label').show();
-                  }else{
-                    $('#departementNaissance-element, #departementNaissance-label').hide();
-                  }
-
-	                pays_naissance_check = true;
-	            }else
-	                $("#info_paysNaissance").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; Veuillez saisir votre pays de naissance ");
-            }else{
-	                $("#info_paysNaissance").html("<img src='<?php APPLICATION_PATH?>/images/icone_erreur.png' height='20px' width='20px' alt='erreur' />&nbsp; Veuillez saisir votre pays de naissance ");            
-            }
+          paysnaissanceCheck($('#paysNaissance').val());
         });
         
     });
