modification de la route infouser

--- a/application/views/scripts/utilisateurs/sidebar.phtml
+++ b/application/views/scripts/utilisateurs/sidebar.phtml
@@ -45,8 +45,8 @@ $this->placeholder('sidebar')->captureStart();
 			if($this->profil_inactif == ""){					
 				?>
 				<ul>
-					<li><a href='/information-utilisateur'>Voir mon profil</a></li>
-					<li><a href='changer-mot-de-passe'>Changer mon mot de passe</a></li>
+					<li><a href='/modification-informations-personnelles'>Voir mon profil</a></li>
+					<li><a href='/changer-mot-de-passe'>Changer mon mot de passe</a></li>
 				</ul>
 			<?php
 			}
