--- a/public/css/style.css
+++ b/public/css/style.css
@@ -480,3 +480,16 @@ ul.spip {
 	margin: -0.7em 0 1em 2em;
 }
 
+#phone {
+	text-align: right;
+	width: 29em;
+	margin-top: 1em;
+	float: left;
+}
+
+#phone h2 {
+	margin-right: 1.8em;
+	margin-bottom: 0.2em;
+	color: #E7E7E7 !important;
+	font-size: 2.5em;
+}
