modification hauteur sidebar

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -69,15 +69,9 @@ $user = new Zend_Session_Namespace('user');?>
 						<div id="logo">
 							<a href="http://in.easylia.com"><img alt="" src="<?php APPLICATION_PATH?>/images/logo.jpg" class="logo" /></a><br />
 						</div> <!-- logo -->
-						<!-- <div id="search">
-							<h2>0810 123 456</h2>
-							<form action="" id="form1">
-								<p>
-									<input type="text" class="input" value="Rechercher…" onblur="if(this.value=='') this.value='Rechercher…'" onfocus="if(this.value =='Rechercher…' ) this.value=''"  />
-									<a href="#" onclick="document.getElementById('form1').submit()"><img alt="" src="<?php APPLICATION_PATH ?>/images/button.gif" /></a>
-								</p>
-							</form>
-						</div> --> <!-- search -->
+						<div id="phone">
+							<h2><cufon class="cufon cufon-canvas" alt="0800" style="width: 84px; height: 40px; "><canvas width="106" height="46" style="width: 106px; height: 46px; top: -5px; left: -2px; "></canvas><cufontext>0800</cufontext></cufon><cufon class="cufon cufon-canvas" alt=" 20" style="width: 51px; height: 40px; "><canvas width="73" height="46" style="width: 73px; height: 46px; top: -5px; left: -2px; "></canvas><cufontext> 20</cufontext></cufon><cufon class="cufon cufon-canvas" alt=" 33" style="width: 51px; height: 40px; "><canvas width="73" height="46" style="width: 73px; height: 46px; top: -5px; left: -2px; "></canvas><cufontext> 33</cufontext></cufon><cufon class="cufon cufon-canvas" alt=" 20" style="width: 51px; height: 40px; "><canvas width="73" height="46" style="width: 73px; height: 46px; top: -5px; left: -2px; "></canvas><cufontext> 20</cufontext></cufon></h2>
+						</div>
 					</div> <!-- header_content -->
 				</div> <!-- header -->
 				<div id="content">
@@ -115,13 +109,10 @@ $user = new Zend_Session_Namespace('user');?>
 							</li>
 						</ul>
 					</div>
-					<div>
-						<img src="/images/GandiSSL_B_standard_fr.png" />
-					</div>
-					<!-- <div id="footer_content_right">
-						<h1 style="margin-bottom: 0;">0810 123 456</h1>
-						<p>Prix d'un appel local</p>
-					</div> --> <!-- footer_content_right -->
+					<div id="footer_content_right">
+						<h1 style="margin-bottom: 0;"><cufon class="cufon cufon-canvas" alt="0800" style="width: 51px; height: 24px; "><canvas width="65" height="28" style="width: 65px; height: 28px; top: -3px; left: -1px; "></canvas><cufontext>0800</cufontext></cufon><cufon class="cufon cufon-canvas" alt=" 20" style="width: 31px; height: 24px; "><canvas width="44" height="28" style="width: 44px; height: 28px; top: -3px; left: -1px; "></canvas><cufontext> 20</cufontext></cufon><cufon class="cufon cufon-canvas" alt=" 33" style="width: 31px; height: 24px; "><canvas width="44" height="28" style="width: 44px; height: 28px; top: -3px; left: -1px; "></canvas><cufontext> 33</cufontext></cufon><cufon class="cufon cufon-canvas" alt=" 20" style="width: 31px; height: 24px; "><canvas width="44" height="28" style="width: 44px; height: 28px; top: -3px; left: -1px; "></canvas><cufontext> 20</cufontext></cufon></h1>	
+						<p>Appel gratuit</p>
+					</div>  <!-- footer_content_right -->
 				</div> <!-- footer-content -->
 			</div> <!-- footer -->
 		</div><!--Fin Page -->
