modification css tout les boutons + modification menu-connecte : arrondi

--- a/application/views/scripts/certifications/passercertification.phtml
+++ b/application/views/scripts/certifications/passercertification.phtml
@@ -15,7 +15,7 @@
         }
     ?>
     <p id="last"></p>			    	
-	<br /><p id="bouton_certification"><button id="previous">Précédent</button><button id="next">Suivant</button><button id="finish" style="display : none">Finir</button></p>
+	<br /><p id="bouton_certification"><button class='submit' id="previous">Précédent</button><button class='submit' id="next">Suivant</button><button class='submit' id="finish" style="display : none">Finir</button></p>
 </div> <!-- qcm -->
 
 <div id="confirmer_fini" style="display : none">
