--- a/application/views/scripts/utilisateurs/changepassword.phtml
+++ b/application/views/scripts/utilisateurs/changepassword.phtml
@@ -12,7 +12,7 @@
 	<input type="password" name="confirmation" id="confirmation" value="">	
 </div> <!-- input_changePassword -->
 
-<input type="submit" name="submit" id="submit_changePassword" value="Valider"><input type="submit" name="cancel" onclick="javascript:history.back()" value="Annuler">
+<input type="submit" class='submit' name="submit" id="submit_changePassword" value="Valider">&nbsp;<input type="submit" class='submit' name="cancel" onclick="javascript:history.back()" value="Annuler">
 
 <p id="error_changePassword" style="color: red;display : none;"></p>
 <p id="info_changePassword" style="color: green;display : none;"></p>
