--- a/application/views/scripts/utilisateurs/afficherinfo.phtml
+++ b/application/views/scripts/utilisateurs/afficherinfo.phtml
@@ -35,7 +35,7 @@
 	<span class="errors_modifier" id="info_telephone">&nbsp;</span>
 	<span class="errors_modifier" id="info_email">&nbsp;</span>
 </div> <!-- span-right -->
-<input type="submit" name="submit" id="submit_modifier" value="Valider"><input type="submit" name="annuler" onclick="javascript:history.back()" value="Annuler">	
+<input type="submit" name="submit" class="submit" id="submit_modifier" value="Valider"><input class="submit" type="submit" name="annuler" onclick="javascript:history.back()" value="Annuler">	
 <span id="info_submit" style="display : none; color : green"></span><span id="error_submit" style="display : none; color : red"></span>
         <?php
     }   
