--- a/application/views/scripts/utilisateurs/connexion.phtml
+++ b/application/views/scripts/utilisateurs/connexion.phtml
@@ -8,7 +8,7 @@
 		<input type="text" name="login" id="login" value="" />
 		<input type="password" name="password" id="password" value="" />
 	</div> <!-- input_login -->
-	<input type="submit" name="submit" id="submit_login" value="Connexion" />
+	<input type="submit" class='submit' name="submit" id="submit_login" value="Connexion" />
 <br /><br />	<a href="/mot-de-passe-oublie">J'ai oublié mon mot de passe</a>
 </form>
 <?php echo $this->placeholder('sidebar');?>
