--- a/public/css/zend.css
+++ b/public/css/zend.css
@@ -188,8 +188,9 @@
 #info_email { margin-top : -1.5em}
 
 #submit_modifier{
-	margin-left: 5.4em;
+	margin-left: 4.3em;
 	margin-top: 3em;
+	margin-right: 0.2em;
 }
 
 /* Changement de mot de passe */
@@ -606,6 +607,22 @@
 	-moz-border-radius: 0px;
 	-webkit-border-radius: 0px;
 	border-radius: 0px 0px;
+}
+
+#menu-connecte li ul li:first-child a{
+    width: auto;
+	background: #1d8eb6;
+	-moz-border-radius: 4px 4px 0 0;
+	-webkit-border-radius-top: 4px 4px 0 0;
+	border-radius: 4px 4px 0 0;
+}
+
+#menu-connecte li ul li:last-child a{
+    width: auto;
+	background: #1d8eb6;
+	-moz-border-radius: 0 0 4px 4px;
+	-webkit-border-radius-top: 0 0 4px 4px;
+	border-radius: 0 0 4px 4px;
 }
 
 #menu-connecte li ul li a:hover{
